feat: add welcome

--- a/museum/index.html
+++ b/museum/index.html
@@ -27,5 +27,17 @@
         <li>Contacts</li>
       </ul>
     </header>
+    <main>
+      <section class="welcome">
+        <div>
+        
+            <h1>welcome<br>to the louvre</h1>
+          
+          <p>From the castle to the museum</p>
+          <button>Discover the Louvre</button>
+        </div>
+        <img src="./assets/img/1.jpg" alt="Mona-Liza" />
+      </section>
+    </main>
   </body>
 </html>
