--- a/museum/index.html
+++ b/museum/index.html
@@ -30,9 +30,7 @@
     <main>
       <section class="welcome">
         <div>
-        
-            <h1>welcome<br>to the louvre</h1>
-          
+          <h1>welcome<br />to the louvre</h1>
           <p>From the castle to the museum</p>
           <button>Discover the Louvre</button>
         </div>
