feat: add welcome slider

--- a/museum/index.html
+++ b/museum/index.html
@@ -29,12 +29,26 @@
     </header>
     <main>
       <section class="welcome">
-        <div>
+        <div class="welcome-content">
           <h1>welcome<br />to the louvre</h1>
           <p>From the castle to the museum</p>
           <button>Discover the Louvre</button>
         </div>
-        <img src="./assets/img/1.jpg" alt="Mona-Liza" />
+        <img class="mona-liza" src="./assets/img/1.jpg" alt="Mona-Liza" />
+        <div class="slider">
+          <div class="slider-page">
+            <span>01</span> 
+            <span>|</span>
+            <span>05</span> 
+          </div>
+          <div class="slider-item active"></div>
+          <div class="slider-item"></div>
+          <div class="slider-item"></div>
+          <div class="slider-item"></div>
+          <div class="slider-item"></div>
+          <img class="arrow-left" src="./assets/svg/arrow-left.svg" alt="arrow-left">
+          <img class="arrow-right" src="./assets/svg/arrow-right.svg" alt="arrow-right">
+        </div>
       </section>
     </main>
   </body>
