feat: add visiting block

--- a/museum/index.html
+++ b/museum/index.html
@@ -37,17 +37,76 @@
         <img class="mona-liza" src="./assets/img/1.jpg" alt="Mona-Liza" />
         <div class="slider">
           <div class="slider-page">
-            <span>01</span> 
+            <span>01</span>
             <span>|</span>
-            <span>05</span> 
+            <span>05</span>
           </div>
           <div class="slider-item active"></div>
           <div class="slider-item"></div>
           <div class="slider-item"></div>
           <div class="slider-item"></div>
           <div class="slider-item"></div>
-          <img class="arrow-left" src="./assets/svg/arrow-left.svg" alt="arrow-left">
-          <img class="arrow-right" src="./assets/svg/arrow-right.svg" alt="arrow-right">
+          <img
+            class="arrow-left"
+            src="./assets/svg/arrow-left.svg"
+            alt="arrow-left"
+          />
+          <img
+            class="arrow-right"
+            src="./assets/svg/arrow-right.svg"
+            alt="arrow-right"
+          />
+        </div>
+      </section>
+
+      <section class="visiting">
+        <h2>virtual tour</h2>
+        <hr class="visiting-hr" />
+        <div class="card-wrapper">
+          <div class="card">
+            <img src="./assets/img/royal-palace.jpg" alt="royal palace" />
+            <h3>royal palace</h3>
+            <hr />
+            <p class="tour">360° Virtual Tour</p>
+            <p class="view">Google Street Panorama View</p>
+          </div>
+          <div class="card">
+            <img src="./assets/img/denon-wing.jpg" alt="denon wing" />
+            <h3>denon wing</h3>
+            <hr />
+            <p class="tour">360° Virtual Tour</p>
+            <p class="view">Google Street Panorama View</p>
+          </div>
+          <div class="card">
+            <img
+              src="./assets/img/colonnade-perrault.jpg"
+              alt="colonnade perrault"/>
+            <h3>colonnade perrault</h3>
+            <hr />
+            <p class="tour">360° Virtual Tour</p>
+            <p class="view">Google Street Panorama View</p>
+          </div>
+          <div class="card">
+            <img src="./assets/img/greek-hall.jpg" alt="greek hall" />
+            <h3>greek hall</h3>
+            <hr />
+            <p class="tour">360° Virtual Tour</p>
+            <p class="view">Google Street Panorama View</p>
+          </div>
+          <div class="card">
+            <img src="./assets/img/mona-liza.jpg" alt="mona liza" />
+            <h3>mona liza</h3>
+            <hr />
+            <p class="tour">360° Virtual Tour</p>
+            <p class="view">Google Street Panorama View</p>
+          </div>
+          <div class="card">
+            <img src="./assets/img/night-palace.jpg" alt="night palace" />
+            <h3>night palace</h3>
+            <hr />
+            <p class="tour">360° Virtual Tour</p>
+            <p class="view">Google Street Panorama View</p>
+          </div>
         </div>
       </section>
     </main>
