feat: add explore block

--- a/museum/index.html
+++ b/museum/index.html
@@ -80,7 +80,8 @@
           <div class="card">
             <img
               src="./assets/img/colonnade-perrault.jpg"
-              alt="colonnade perrault"/>
+              alt="colonnade perrault"
+            />
             <h3>colonnade perrault</h3>
             <hr />
             <p class="tour">360° Virtual Tour</p>
@@ -107,6 +108,43 @@
             <p class="tour">360° Virtual Tour</p>
             <p class="view">Google Street Panorama View</p>
           </div>
+        </div>
+      </section>
+
+      <section class="explore">
+        <div class="content">
+          <h2>picture explore</h2>
+          <hr />
+          <p>
+            Las Meninas is a 1656 painting by Diego Velázquez, the leading
+            artist of the Spanish Golden Age.
+          </p>
+          <p>
+            It was cleaned in 1984 to remove a
+            <span class="yellow">"yellow veil"</span> of dust that had gathered
+            since the previous restoration in the 19th century.
+          </p>
+          <p>
+            The cleaning provoked furious protests, not because the picture had
+            been damaged in any way, but because it looked different.
+          </p>
+        </div>
+        <div class="photo">
+          <img
+            class="explore-main"
+            src="./assets/img/explore-main.jpg"
+            alt="before"
+          />
+          <img
+            class="explore-left"
+            src="./assets/img/explore-left.jpg"
+            alt="after"
+          />
+          <img
+            class="slider"
+            src="./assets/svg/explore-slider.svg"
+            alt="slider"
+          />
         </div>
       </section>
     </main>
